# dealpipe

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  workspace.yaml
dealpipe/: lookups.py  mime.py  process_deals.py  repository.py  writer.py
dealpipe/pipelines/: process_deals.py
dealpipe/reader/: __init__.py  factory.py  mime.py  reader.py
dealpipe/reader/formats/: __init__.py  csv.py  excel.py  parquet.py  yaml.py
dealpipe/schema/: __init__.py  checks.py  schema.py  transform.py
dealpipe/solids/: loader.py  lookups.py  postprocessor.py  preprocessor.py  transform.py  validator.py  writer.py
dealpipe/solids/validation/: __init__.py  expectations.py  report_generator.py  report_writer.py  types.py  validator.py
dealpipe/tests/: test_lookups.py
dealpipe/tests/pipelines/: test_process_deals.py
dealpipe/tests/reader/: test_factory.py  test_init.py  test_mime.py
dealpipe/tests/reader/formats/: test_csv.py  test_excel.py  test_parquet.py  test_yaml.py
dealpipe/tests/resources/: test.csv  test.xls  test.xlsx  test.yaml
dealpipe/tests/schema/: test_checks.py  test_schema.py  test_transform.py
dealpipe_tests/test_pipelines/: test_my_pipeline.py  test_process_deals.py
files/: invalid.csv  invalid.xlsx  invalid.yaml  lookups.csv  lookups.yaml  valid.csv  valid.xlsx  valid.yaml
presets/: invalid_csv_preset.yaml  invalid_xlsx_preset.yaml  invalid_yaml_preset.yaml  valid_csv_preset.yaml  valid_xlsx_preset.yaml  valid_yaml_preset.yaml
