[tool.poetry]
name = "dealpipe"
version = "0.1.0"
description = ""
authors = ["Daniel Popov <dido.popov@gmail.com>"]
packages = [
    { include = "dealpipe", from = "." },
]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^0.11.9"
dagit = "^0.11.9"
pandas = "^1.2.4"
dagster-pandas = "^0.11.9"
xlrd = "^2.0.1"
openpyxl = "^3.0.7"
great-expectations = "^0.13.19"
XlsxWriter = "^1.4.3"
pyarrow = "^4.0.0"
pylint = "^2.8.2"
pre-commit = "^2.12.1"
isort = "^5.8.0"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.5b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
atomic = true
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
order_by_type = true
case_sensitive = true